// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Search Field/Menu (Private) Default 1`] = `
.c7 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c1 {
  margin-top: 16px;
  min-width: 100%;
  whitespace: no-wrap;
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  background: white;
  position: absolute;
}

.c1 > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4 {
  cursor: pointer;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c4:hover {
  background: #3498db;
  color: white;
}

.c4:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c4:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c4 > div {
  padding: 14px;
}

.c4 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c4 > div:hover {
  outline: none;
}

.c9 {
  cursor: auto;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c9:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c9:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c9 > div {
  padding: 14px;
}

.c9 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c9 > div:hover {
  outline: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c6 > label {
  padding: 0 8px 0 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  margin: -6px 8px -6px 0;
}

.c8:first-child {
  margin-left: -6px;
}

.c3 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c2 {
  top: 72px;
  position: absolute;
  width: 100%;
}

.c0 {
  width: 400px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <ul
      className="c3 scroll"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <li
        className="c4 itemWrapper"
      >
        <div
          className="c5 itemContainer item"
        >
          <div
            className="c6 labelContainer"
          >
            <img
              alt=""
              className="c7 c8 itemImage"
              height={40}
              size={40}
              src="https://picsum.photos/100?image=0"
              width={40}
            />
            Apple
          </div>
        </div>
      </li>
      <li
        className="c4 itemWrapper"
      >
        <div
          className="c5 itemContainer item"
        >
          <div
            className="c6 labelContainer"
          >
            <img
              alt=""
              className="c7 c8 itemImage"
              height={40}
              size={40}
              src="https://picsum.photos/100?image=0"
              width={40}
            />
            Banana
          </div>
        </div>
      </li>
      <li
        className="c4 itemWrapper"
      >
        <div
          className="c5 itemContainer item"
        >
          <div
            className="c6 labelContainer"
          >
            <img
              alt=""
              className="c7 c8 itemImage"
              height={40}
              size={40}
              src="https://picsum.photos/100?image=0"
              width={40}
            />
            Pear
          </div>
        </div>
      </li>
      <li
        className="c9 itemWrapper footer"
      />
    </ul>
  </div>
</div>
`;

exports[`Storyshots Search Field/Menu (Private) footer only 1`] = `
.c6 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c6 .farmblocks-icon {
  display: block;
}

.c7 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

.c9 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c9 span.margin-left {
  margin-left: 4px;
}

.c9 span.margin-right {
  margin-right: 4px;
}

.c9 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9 > a {
  color: inherit;
}

.c9:hover {
  color: #3498db;
}

.c1 {
  margin-top: 16px;
  min-width: 100%;
  whitespace: no-wrap;
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  background: white;
  position: absolute;
}

.c1 > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4 {
  cursor: auto;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c4:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c4:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c4 > div {
  padding: 14px;
}

.c4 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c4 > div:hover {
  outline: none;
}

.c3 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c2 {
  top: 72px;
  position: absolute;
  width: 100%;
}

.c0 {
  width: 400px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 8px;
  background: #f6f8f9;
}

.c5 .icon {
  width: 24px;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 8px;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 12px;
  font-size: 12px;
}

.c5 .link {
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <ul
      className="c3 scroll"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <li
        className="c4 itemWrapper footer"
      >
        <div
          className="c5"
        >
          <span
            className="c6"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height={32}
              viewBox="4 4 32 32"
              width={32}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M31 20c0-6.074-4.926-11-11-11-6.075 0-11 4.925-11 11s4.925 11 11 11 11-4.925 11-11Zm2 0c0 7.18-5.82 13-13 13S7 27.18 7 20 12.82 7 20 7c7.179 0 13 5.821 13 13Zm-13.505 4.408c1.05 0 1.827.776 1.827 1.785v.042c0 1.01-.776 1.787-1.827 1.787s-1.829-.778-1.829-1.787v-.042c0-1.009.778-1.785 1.829-1.785Zm0-1.387c-.61 0-1.051-.462-1.134-1.028l-.212-1.43c-.103-.693.295-1.177.967-1.26 1.827-.23 2.67-.798 2.67-1.828v-.042c0-.944-.717-1.49-1.934-1.49-.904 0-1.682.271-2.437.839-.252.189-.588.336-.947.336A1.487 1.487 0 0 1 15 15.648c0-.399.166-.82.545-1.135C16.659 13.59 18.067 13 19.915 13 22.94 13 25 14.555 25 17.35v.041c0 2.668-1.85 3.761-4.14 4.223l-.064.379c-.084.546-.525 1.028-1.133 1.028h-.168Z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
          <div
            className="c7"
            size={14}
            type="#2f313a"
          >
            Can’t find a farmers market?
            <div
              className="c8"
              size={18}
              type="#2f313a"
            >
              <div
                className="c9 link"
                disabled={false}
                fontWeight="600"
                size={16}
                type="#59636f"
              >
                <span>
                  Contact Support?
                </span>
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Search Field/Menu (Private) onItemClick 1`] = `
.c7 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c1 {
  margin-top: 16px;
  min-width: 100%;
  whitespace: no-wrap;
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  background: white;
  position: absolute;
}

.c1 > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4 {
  cursor: pointer;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c4:hover {
  background: #3498db;
  color: white;
}

.c4:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c4:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c4 > div {
  padding: 14px;
}

.c4 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c4 > div:hover {
  outline: none;
}

.c9 {
  cursor: auto;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c9:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c9:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c9 > div {
  padding: 14px;
}

.c9 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c9 > div:hover {
  outline: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c6 > label {
  padding: 0 8px 0 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  margin: -6px 8px -6px 0;
}

.c8:first-child {
  margin-left: -6px;
}

.c3 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c2 {
  top: 72px;
  position: absolute;
  width: 100%;
}

.c0 {
  width: 400px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <ul
      className="c3 scroll"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <li
        className="c4 itemWrapper"
        onMouseDown={[Function]}
      >
        <div
          className="c5 itemContainer item"
        >
          <div
            className="c6 labelContainer"
          >
            <img
              alt=""
              className="c7 c8 itemImage"
              height={40}
              size={40}
              src="https://picsum.photos/100?image=0"
              width={40}
            />
            Apple
          </div>
        </div>
      </li>
      <li
        className="c4 itemWrapper"
        onMouseDown={[Function]}
      >
        <div
          className="c5 itemContainer item"
        >
          <div
            className="c6 labelContainer"
          >
            <img
              alt=""
              className="c7 c8 itemImage"
              height={40}
              size={40}
              src="https://picsum.photos/100?image=0"
              width={40}
            />
            Banana
          </div>
        </div>
      </li>
      <li
        className="c4 itemWrapper"
        onMouseDown={[Function]}
      >
        <div
          className="c5 itemContainer item"
        >
          <div
            className="c6 labelContainer"
          >
            <img
              alt=""
              className="c7 c8 itemImage"
              height={40}
              size={40}
              src="https://picsum.photos/100?image=0"
              width={40}
            />
            Pear
          </div>
        </div>
      </li>
      <li
        className="c9 itemWrapper footer"
      />
    </ul>
  </div>
</div>
`;

exports[`Storyshots Search Field/Menu (Private) with empty items 1`] = `
.c0 {
  width: 400px;
}

<div
  className="c0"
/>
`;

exports[`Storyshots Search Field/Menu (Private) with key names 1`] = `
.c7 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c1 {
  margin-top: 16px;
  min-width: 100%;
  whitespace: no-wrap;
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  background: white;
  position: absolute;
}

.c1 > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4 {
  cursor: pointer;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c4:hover {
  background: #3498db;
  color: white;
}

.c4:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c4:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c4 > div {
  padding: 14px;
}

.c4 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c4 > div:hover {
  outline: none;
}

.c9 {
  cursor: auto;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c9:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c9:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c9 > div {
  padding: 14px;
}

.c9 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c9 > div:hover {
  outline: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c6 > label {
  padding: 0 8px 0 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  margin: -6px 8px -6px 0;
}

.c8:first-child {
  margin-left: -6px;
}

.c3 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c2 {
  top: 72px;
  position: absolute;
  width: 100%;
}

.c0 {
  width: 400px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <ul
      className="c3 scroll"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <li
        className="c4 itemWrapper"
        onMouseDown={[Function]}
      >
        <div
          className="c5 itemContainer item"
        >
          <div
            className="c6 labelContainer"
          >
            <img
              alt=""
              className="c7 c8 itemImage"
              height={40}
              size={40}
              src="https://picsum.photos/100?image=0"
              width={40}
            />
            Apple
          </div>
        </div>
      </li>
      <li
        className="c4 itemWrapper"
        onMouseDown={[Function]}
      >
        <div
          className="c5 itemContainer item"
        >
          <div
            className="c6 labelContainer"
          >
            <img
              alt=""
              className="c7 c8 itemImage"
              height={40}
              size={40}
              src="https://picsum.photos/100?image=0"
              width={40}
            />
            Banana
          </div>
        </div>
      </li>
      <li
        className="c4 itemWrapper"
        onMouseDown={[Function]}
      >
        <div
          className="c5 itemContainer item"
        >
          <div
            className="c6 labelContainer"
          >
            <img
              alt=""
              className="c7 c8 itemImage"
              height={40}
              size={40}
              src="https://picsum.photos/100?image=0"
              width={40}
            />
            Pear
          </div>
        </div>
      </li>
      <li
        className="c9 itemWrapper footer"
      />
    </ul>
  </div>
</div>
`;
